# tracing-claude-code-local

./: .gitignore  PLAN.md  README.md  local_trace_hook.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  subagent-plan.md  test_hook.sh
.claude/: CLAUDE.md
claude_trace/: __init__.py  analyzer.py  cli.py  collector.py  models.py  otel_collector.py  reporter.py  resource_monitor.py  storage.py  utils.py
tests/: README.md  conftest.py  requirements-test.txt
tests/helpers/: bash_runner.py  state_manager.py
tests/integration/: test_end_to_end.py  test_otel_session_mapping.py
tests/test_data/: minimal_transcript.jsonl  multi_turn.jsonl  streaming_sse.jsonl  with_tools.jsonl
tests/unit/: test_api_calls.py  test_content_formatting.py  test_cost_tracking.py  test_main_entry.py  test_message_parsing.py  test_model_name_formatting.py  test_multipart_serialization.py  test_state_management.py  test_timestamp_conversion.py  test_trace_creation.py  test_trace_ordering.py  test_utilities.py
tests/unit/claude_trace/: __init__.py  test_collector.py  test_models.py  test_otel_collector.py  test_resource_monitor.py  test_utils.py
